manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
spec:
  selector:
    app: myapp

  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
